log truncation and topic reset